theme - fixed alignment of navigation menues

--- a/blog/src/components/contact-menu.scss
+++ b/blog/src/components/contact-menu.scss
@@ -30,10 +30,6 @@
                 border-bottom: 1px solid $red;
             }
 
-            @media ($media-small) {
-                margin-right: .5rem;
-            }
-
             @media ($media-medium) {
                 margin-right: 1rem;
             }
