--- a/blog/src/components/contextual-menu.scss
+++ b/blog/src/components/contextual-menu.scss
@@ -1,8 +1,13 @@
 @import './variables.scss';
 
 #contextual-menu {
-    margin: 1rem 0;
-    text-align: left;
+    margin: 1rem .5rem;
+    text-align: center;
+
+    @media ($media-medium) {
+        text-align: left;
+    }
+
     a {
         font-size: 1.4rem;
         margin-right: 1rem;
